[package]
name = "outpack_server"
version = "0.1.0"
edition = "2021"
include = ["schema/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "outpack_server"
path = "src/main.rs"

[lib]
name = "outpack_server"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
getopts = "0.2"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.2"
jsonschema = "0.16.1"
url = "2.3.1"
