[package]
name = "outpack"
version = "0.2.0"
edition = "2021"
include = ["schema/*"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
getopts = "0.2"
cached = "0.40.0"
walkdir = "2.3.2"
md5 = "0.7.0"
sha2 = "0.10.6"
sha1 = "0.10.5"
lazy_static = "1.4.0"
pest = "2.7"
pest_derive = "2.7"
itertools = "0.10.5"
tempfile = "3.6.0"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.2"
jsonschema = "0.16.1"
url = "2.3.1"
tempdir = "0.3.7"
tar = "0.4.38"
